--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-vue": "^2.10.1",
     "core-js": "^3.6.4",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
   },
