--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vue-scrollto": "^2.17.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
